RESOLVED FIXED308132
[threaded-animations] running Jetstream on iOS crashes under `AcceleratedEffectStackUpdater::update()`
https://bugs.webkit.org/show_bug.cgi?id=308132
Summary [threaded-animations] running Jetstream on iOS crashes under `AcceleratedEffe...
Antoine Quint
Reported 2026-02-18 07:21:07 PST
Here's the trace: 0 WebCore 0x1bf6ff758 WebCore::AcceleratedEffectStackUpdater::update() 1 WebCore 0x1bf707de4 WebCore::AnimationTimelinesController::runPostRenderingUpdateTasks() 2 WebCore 0x1c05218b0 WTF::Detail::CallableWrapper<WebCore::Page::updateRendering()::$_14, void, WebCore::Document&>::call(WebCore::Document&) 3 WebCore 0x1c05103d0 WebCore::Page::forEachDocumentFromMainFrame(WebCore::Frame const&, WTF::Function<void (WebCore::Document&)> const&) 4 WebCore 0x1c05078a0 WebCore::Page::updateRendering() 5 WebKit 0x1bd9a2df0 WebKit::WebPage::updateRendering() 6 WebKit 0x1bcc439f0 WebKit::RemoteLayerTreeDrawingArea::updateRendering() 7 WebKit 0x1bcc47454 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'(), void>::call() 8 WebCore 0x1c06624ec WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 9 WebCore 0x1c06b898c WebCore::timerFired(__CFRunLoopTimer*, void*) 10 CoreFoundation 0x19f0ff1c0 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 32 /Library/Caches/com.apple.xbs/2897F4F5-6787-4D89-842E-25B95E51A7B6/TemporaryDirectory.8SmDgn/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1837 11 CoreFoundation 0x19f0feeb8 __CFRunLoopDoTimer + 980 /Library/Caches/com.apple.xbs/2897F4F5-6787-4D89-842E-25B95E51A7B6/TemporaryDirectory.8SmDgn/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2468 12 CoreFoundation 0x19f0fea2c __CFRunLoopDoTimers + 280 /Library/Caches/com.apple.xbs/2897F4F5-6787-4D89-842E-25B95E51A7B6/TemporaryDirectory.8SmDgn/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2599 13 CoreFoundation 0x19f0bf22c __CFRunLoopRun + 1816 /Library/Caches/com.apple.xbs/2897F4F5-6787-4D89-842E-25B95E51A7B6/TemporaryDirectory.8SmDgn/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3150 14 CoreFoundation 0x19f0be1f4 _CFRunLoopRunSpecificWithOptions + 532 /Library/Caches/com.apple.xbs/2897F4F5-6787-4D89-842E-25B95E51A7B6/TemporaryDirectory.8SmDgn/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3462 15 Foundation 0x19c18bc40 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /Library/Caches/com.apple.xbs/B240606C-A896-4B44-A58A-A653CE9BEEA6/TemporaryDirectory.aM3a2h/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:375 16 Foundation 0x19c18fd54 -[NSRunLoop(NSRunLoop) run] + 64 /Library/Caches/com.apple.xbs/B240606C-A896-4B44-A58A-A653CE9BEEA6/TemporaryDirectory.aM3a2h/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:400 17 libxpc.dylib 0x1b616ca44 _xpc_objc_main + 336 /Library/Caches/com.apple.xbs/75067DDB-E06D-4746-9E46-8EEE415D146D/TemporaryDirectory.WvSU2V/Sources/libxpc/src/main.m:268 18 libxpc.dylib 0x1b616f338 _xpc_main + 72 /Library/Caches/com.apple.xbs/75067DDB-E06D-4746-9E46-8EEE415D146D/TemporaryDirectory.WvSU2V/Sources/libxpc/src/init.c:1295 19 libxpc.dylib 0x1b616f5a8 xpc_main + 64 /Library/Caches/com.apple.xbs/75067DDB-E06D-4746-9E46-8EEE415D146D/TemporaryDirectory.WvSU2V/Sources/libxpc/src/init.c:1378 20 ExtensionFoundation 0x1a073f6a8 _EXRunningLibXPCServiceExtension.resume() + 1556 /Library/Caches/com.apple.xbs/C9942AE7-CC51-4027-A5D4-CA6289FF6771/TemporaryDirectory.XTM497/Sources/ExtensionFoundation/ExtensionFoundation/Source/EXExtension/RunningExtension/EXRunningLibXPCServiceExtension.swift:107 21 ExtensionFoundation 0x1a073e068 _EXRunningExtension.start(withArguments:count:) + 108 /Library/Caches/com.apple.xbs/C9942AE7-CC51-4027-A5D4-CA6289FF6771/TemporaryDirectory.XTM497/Sources/ExtensionFoundation/ExtensionFoundation/Source/EXExtension/RunningExtension/EXRunningExtension.swift:66 22 ExtensionFoundation 0x1a073c524 ExtensionMain.start(withArguments:count:) + 112 /Library/Caches/com.apple.xbs/C9942AE7-CC51-4027-A5D4-CA6289FF6771/TemporaryDirectory.XTM497/Sources/ExtensionFoundation/ExtensionFoundation/Source/EXExtension/RunningExtension/ExtensionMain.swift:66 [inlined] 23 ExtensionFoundation 0x1a073c524 EXExtensionMain(_:_:) + 1380 /Library/Caches/com.apple.xbs/C9942AE7-CC51-4027-A5D4-CA6289FF6771/TemporaryDirectory.XTM497/Sources/ExtensionFoundation/ExtensionFoundation/Source/EXExtension/RunningExtension/ExtensionMain.swift:37 24 Foundation 0x19c2ed07c _EXExtensionMain + 148 /Library/Caches/com.apple.xbs/B240606C-A896-4B44-A58A-A653CE9BEEA6/TemporaryDirectory.aM3a2h/Sources/Foundation/Foundation/Extensions/NSExtensionMain.m:14 [inlined] 25 Foundation 0x19c2ed07c NSExtensionMain + 200 /Library/Caches/com.apple.xbs/B240606C-A896-4B44-A58A-A653CE9BEEA6/TemporaryDirectory.aM3a2h/Sources/Foundation/Foundation/Extensions/NSExtensionMain.m:21 26 dyld 0x19bb15588 start + 6540
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-18 07:21:13 PST
Antoine Quint
Comment 2 2026-02-19 12:22:06 PST
EWS
Comment 3 2026-02-20 06:16:25 PST
Committed 307912@main (1415c430401b): <https://commits.webkit.org/307912@main> Reviewed commits have been landed. Closing PR #59020 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.