[threaded-animations] running Jetstream on iOS crashes under `AcceleratedEffectStackUpdater::update()` https://bugs.webkit.org/show_bug.cgi?id=308132 rdar://170636362

Reviewed by Ryosuke Niwa and Tim Nguyen.

Use `WeakStyleable` for the `HashSet` holding the targets pending an update in `AcceleratedEffectStackUpdater`.

No new layout test but this issue was caught by Apple's automated performance testing infrastructure.

* Source/WebCore/animation/AcceleratedEffectStackUpdater.cpp:
(WebCore::AcceleratedEffectStackUpdater::update):
(WebCore::AcceleratedEffectStackUpdater::scheduleUpdateForTarget):
* Source/WebCore/animation/AcceleratedEffectStackUpdater.h:
* Source/WebCore/style/Styleable.h:
(WebCore::WeakStyleableHashTraits::isWeakNullValue):
(WebCore::WeakStyleableHashTraits::constructDeletedValue):
(WebCore::WeakStyleableHashTraits::isDeletedValue):
(WebCore::WeakStyleableHash::hash):
(WebCore::WeakStyleableHash::equal):

Canonical link: https://commits.webkit.org/307912@main