Source/WebCore/animation/AcceleratedEffectStackUpdater.cpp
@@ -52,16 +52,15 @@ void AcceleratedEffectStackUpdater::update()
     HashSet<Ref<AcceleratedTimeline>> timelinesInUpdate;
 
     auto targetsPendingUpdate = std::exchange(m_targetsPendingUpdate, { });
-    for (auto [element, pseudoElementIdentifier] : targetsPendingUpdate) {
-        if (!element)
+    for (auto weakTarget : targetsPendingUpdate) {
+        auto target = weakTarget.styleable();
+        if (!target)
             continue;
 
-        Styleable target { *element, pseudoElementIdentifier };
-
         if (!page)
-            page = protect(element->document())->page();
+            page = protect(target->element.document())->page();
 
-        CheckedPtr renderer = dynamicDowncast<RenderLayerModelObject>(target.renderer());
+        CheckedPtr renderer = dynamicDowncast<RenderLayerModelObject>(target->renderer());
         if (!renderer || !renderer->isComposited())
             continue;
 
@@ -76,7 +75,7 @@ void AcceleratedEffectStackUpdater::update()
 
 void AcceleratedEffectStackUpdater::scheduleUpdateForTarget(const Styleable& target)
 {
-    m_targetsPendingUpdate.add({ &target.element, target.pseudoElementIdentifier });
+    m_targetsPendingUpdate.add({ target });
 }
 
 } // namespace WebCore
